path to manage file?

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,4 +20,4 @@ jobs:
         pip install -r requirements/dev.txt
     - name: Coverage report
       run: |
-        manage.py cov
+        python manage.py cov
