--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
         pip install -r requirements/dev.txt
     - name: Test with unittest
       run: |
-        manage.py test
+        python manage.py test
