--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,4 +20,6 @@ jobs:
         pip install -r requirements/dev.txt
     - name: Coverage report
       run: |
+        env:
+            ENVIRONMENT: dev
         python manage.py cov
