--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,6 @@ jobs:
         pip install -r requirements/dev.txt
     - name: Test with unittest
       env:
-        ENVIRONMENT: dev
+        ENVIRONMENT: test
       run: |
         python manage.py test
