--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,12 @@ venv/
 *.DS_Store
 /.webassets-cache/*
 fabfile.py
-dev.py
-prod.py
 notes/
 notes.txt
 coverage/
 *.db
+config/dev.py
+config/prod.py
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
